add: dev oving1

--- a/oving1/index.html
+++ b/oving1/index.html
@@ -4,12 +4,19 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <title>Rødlisteart</title>
+        <link rel="stylesheet" href="styles/style.css">
     </head>
     <body>
         <h1>Rødlisteart: Ulv</h1>
-
-        <p>
-            <img src="images/ulv.jpg">
+        <img src="images/ulv.jpg" alt="https://www.miljodirektoratet.no/contentassets/4e0a8235dfe74cd9ae0b562aa1c55ca5/ulv-640x386.jpg">
+        <p >
+            <h2>Opplysninger:</h2>
+            <ul>
+                <li id="info">latinsk navn</li>
+                <li>utbredelse, hvor dyret finnes</li>
+                <li>antall individer</li>
+            </ul>
+            <h2>Atferd</h2>
         </p>
 
     </body>
